# vis-novel-script

assets/armatures/: Ahura.arm  Mongoz.arm
assets/fonts/: liberation-mono.fnt
assets/models/: Ahura.ply  Mongoz.ply  testCube.ply
assets/shaders/: background.frag  background.vert  character.frag  character_3D.frag  character_3D.vert  debug.frag  debug.vert  gui.frag  gui_simple.frag  gui_simple.vert  image.frag  image.vert  test.frag  test.vert  text.frag  text.vert  text2D.frag  text2D.vert
scripts/: main.vnas  math-test.vnas  string-test.vnas  test2.vnas
src/: cross_file.txt  definitions.h  main.cpp  meson.build  src.kdev4
src/.kdev4/: src.kdev4
src/VNCore/: ExpressionParser.cpp  ExpressionParser.h  VNAssetManager.cpp  VNAssetManager.h  VNCompiledFile.cpp  VNCompiledFile.h  VNDebug.cpp  VNDebug.h  VNInterpreter.cpp  VNInterpreter.h  VNOperation.cpp  VNOperation.h  VNVariable.cpp  VNVariable.h  Window.cpp  Window.h
src/VNOperationDefs/: OperationDefs.cpp  OperationDefs.h  OperationsArithmetic.cpp  OperationsArmature.cpp  OperationsAudio.cpp  OperationsCharacter.cpp  OperationsControl.cpp  OperationsDialogue.cpp  OperationsGUI.cpp  OperationsImage.cpp  OperationsModel.cpp  OperationsObject.cpp  OperationsScene.cpp  OperationsShader.cpp  OperationsString.cpp  OperationsView.cpp
src/audio/: Audio.cpp  Audio.h
src/graphics/: Armature.cpp  Armature.h  ArmatureConstraints.cpp  ArmatureConstraints.h  DebugDraw.cpp  DebugDraw.h  FBO.cpp  FBO.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  View.cpp  View.h  _Armature-h.txt
src/gui/: .GUI_OLD.cpp  .GUI_OLD.h  Element.cpp  Element.h  ElementSet.cpp  ElementSet.h  FontInfo.cpp  FontInfo.h  GUI.cpp  GUI.h  Menu.cpp  Menu.h  Text.cpp  Text.h
